template: Use ctxdb

--- a/template.tmpl
+++ b/template.tmpl
@@ -5,6 +5,7 @@ import (
 	"database/sql"
 	"fmt"
 
+	"bou.ke/orm/ctxdb"
 	"bou.ke/orm/rel"
 )
 {{range .Tables}}
@@ -41,7 +42,6 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
     return fmt.Errorf("record deleted")
   }
 
-	db := getDB(ctx)
 	if o.orm.existingRecord {
 		stmt := &rel.UpdateStatement{
 			Table: "users",
@@ -65,7 +65,7 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
 {{end}}
 
 		query, values := stmt.Build()
-		_, err := db.ExecContext(ctx, query, values...)
+		_, err := ctxdb.Exec(ctx, query, values...)
 		if err != nil {
 			return err
 		}
@@ -82,7 +82,7 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
     }{{end}}{{end}}
 
 		query, values := stmt.Build()
-		res, err := db.ExecContext(ctx, query, values...)
+		res, err := ctxdb.Exec(ctx, query, values...)
 		if err != nil {
 			return err
 		}
@@ -178,17 +178,15 @@ func (q *{{.Singular}}Relation) buildQuery(fields []string) (query string, args 
 }
 
 func (q *{{.Singular}}Relation) queryRow(ctx context.Context, fields []string, dest []interface{}) error {
-	db := getDB(ctx)
 	query, args := q.buildQuery(fields)
 
-	return db.QueryRowContext(ctx, query, args).Scan(dest...)
+	return ctxdb.QueryRow(ctx, query, args).Scan(dest...)
 }
 
 func (q *{{.Singular}}Relation) query(ctx context.Context, fields []string) (*sql.Rows, error) {
-	db := getDB(ctx)
 	query, args := q.buildQuery(fields)
 
-	return db.QueryContext(ctx, query, args)
+	return ctxdb.Query(ctx, query, args)
 }
 
 func (q *{{.Singular}}Relation) Count(ctx context.Context) (int64, error) {
@@ -205,8 +203,7 @@ func (q *{{.Singular}}Relation) DeleteAll(ctx context.Context) (int64, error) {
 
 	query, args := s.Build()
 
-	db := getDB(ctx)
-  res, err := db.ExecContext(ctx, query, args...)
+  res, err := ctxdb.Exec(ctx, query, args...)
   if err != nil {
 		return 0, err
   }
