--- a/template.tmpl
+++ b/template.tmpl
@@ -5,6 +5,8 @@ import (
 	"database/sql"
 	"fmt"
 
+  "github.com/pkg/errors"
+
 	"bou.ke/orm/ctxdb"
 	"bou.ke/orm/rel"
 )
@@ -44,7 +46,7 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
 
 	if o.orm.existingRecord {
 		stmt := &rel.UpdateStatement{
-			Table: "users",
+			Table: {{.Name | printf "%q"}},
 			Wheres: []rel.Expr{
         &rel.Equality{
           Field: "id",
@@ -67,11 +69,11 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
 		query, values := stmt.Build()
 		_, err := ctxdb.Exec(ctx, query, values...)
 		if err != nil {
-			return err
+			return errors.Wrapf(err, "executing %q", query)
 		}
 	} else {
 		stmt := &rel.InsertStatement{
-			Table: "users",
+			Table: {{.Name | printf "%q"}},
 		}
     {{range .Columns}}{{if eq .Name "id"}}
     if o.{{.FieldName}} != 0 { {{end}}
@@ -84,7 +86,7 @@ func (o *{{.StructName}}) Save(ctx context.Context) error {
 		query, values := stmt.Build()
 		res, err := ctxdb.Exec(ctx, query, values...)
 		if err != nil {
-			return err
+			return errors.Wrapf(err, "executing %q", query)
 		}
 		o.orm.existingRecord = true
 
@@ -113,7 +115,7 @@ func (o *{{.StructName}}) Delete(ctx context.Context) error {
 
 func (o *{{.StructName}}) fieldPointerForColumn(column string) interface{} {
 	switch column { {{range .Columns}}
-	case "{{.Name}}":
+	case {{.Name | printf "%q"}}:
 		return &o.{{.FieldName}}{{end}}
 	default:
 		return nil
@@ -132,23 +134,66 @@ func (o *{{.StructName}}) pointersForFields(fields []string) ([]interface{}, err
 	return pointers, nil
 }
 
+// assignField sets the field to the value.
+// It panics if the field doesn't exist or the value is the wrong type.
+func (o *{{.StructName}}) assignField(name string, value interface{}) {
+	switch name { {{range .Columns}}
+	case {{.Name | printf "%q"}}:
+		o.{{.FieldName}} = value.({{.Type}}){{end}}
+	default:
+		panic("unknown field: " + name)
+  }
+}
+
 type {{.StructName}}Relation interface {
+  // All ...
 	All(ctx context.Context) ([]*{{.StructName}}, error)
+
+  // Count ...
 	Count(ctx context.Context) (int64, error)
+
   // Create
+  // TODO
+
+  // DeleteAll ...
 	DeleteAll(ctx context.Context) (int64, error)
+
+  // Find ...
 	Find(ctx context.Context, id int64) (*{{.StructName}}, error)
+
+  // FindBy ...
 	FindBy(ctx context.Context, query string, args ...interface{}) (*{{.StructName}}, error)
+
+  // First ...
 	First(ctx context.Context) (*{{.StructName}}, error)
+
+  // Last ...
 	Last(ctx context.Context) (*{{.StructName}}, error)
+
+  // Limit ...
 	Limit(limit int64) {{.StructName}}Relation
+
+  // New creates a {{.StructName}} populated with the scope of the relation
+  New() *{{.StructName}}
+
+  // Offset ...
 	Offset(offset int64) {{.StructName}}Relation
+
+  // Order ...
 	Order(query string, args ...string) {{.StructName}}Relation
+
+  // Select ...
 	Select(fields ...string) {{.StructName}}Relation
+
+  // Take ...
 	Take(ctx context.Context) (*{{.StructName}}, error)
+
+  // Where ...
 	Where(query string, args ...interface{}) {{.StructName}}Relation
 }
 
+// {{.RelationName}} returns a {{.StructName}}Relation, allowing you to build a query.
+// Note: the intermediate result of calls to the Relation can not be reused.
 func {{.RelationName}}() {{.StructName}}Relation {
 	return &{{.Singular}}Relation{}
 }
@@ -180,13 +225,13 @@ func (q *{{.Singular}}Relation) buildQuery(fields []string) (query string, args 
 func (q *{{.Singular}}Relation) queryRow(ctx context.Context, fields []string, dest []interface{}) error {
 	query, args := q.buildQuery(fields)
 
-	return ctxdb.QueryRow(ctx, query, args).Scan(dest...)
+	return ctxdb.QueryRow(ctx, query, args...).Scan(dest...)
 }
 
 func (q *{{.Singular}}Relation) query(ctx context.Context, fields []string) (*sql.Rows, error) {
 	query, args := q.buildQuery(fields)
 
-	return ctxdb.Query(ctx, query, args)
+	return ctxdb.Query(ctx, query, args...)
 }
 
 func (q *{{.Singular}}Relation) Count(ctx context.Context) (int64, error) {
@@ -220,7 +265,7 @@ func (q *{{.Singular}}Relation) Where(query string, args ...interface{}) {{.Stru
 		Expr:  &rel.BindParam{Value: args[0]},
 	})
 
-	for i := 1; i <= len(args); i += 2 {
+	for i := 1; i < len(args); i += 2 {
 		q.whereClause = append(q.whereClause, &rel.Equality{
 			Field: args[i].(string),
 			Expr:  &rel.BindParam{Value: args[i+1]},
@@ -233,6 +278,19 @@ func (q *{{.Singular}}Relation) Where(query string, args ...interface{}) {{.Stru
 func (q *{{.Singular}}Relation) Limit(limit int64) {{.StructName}}Relation {
 	q.limit = limit
 	return q
+}
+
+func (q *{{.Singular}}Relation) New() *{{.StructName}} {
+	o := &{{.StructName}}{}
+	for _, w := range q.whereClause {
+		if eq, ok := w.(*rel.Equality); ok {
+			if bind, ok := eq.Expr.(*rel.BindParam); ok {
+				o.assignField(eq.Field, bind.Value)
+      }
+    }
+  }
+
+	return o
 }
 
 func (q *{{.Singular}}Relation) Select(fields ...string) {{.StructName}}Relation {
@@ -301,6 +359,10 @@ func (q *{{.Singular}}Relation) Take(ctx context.Context) (*{{.StructName}}, err
 
   q.limit = 1
 	err = q.queryRow(ctx, fields, ptrs)
+  if err == sql.ErrNoRows {
+    return nil, nil
+  }
+
   {{range .Columns}}
   o.orm.old.{{.FieldName}} = o.{{.FieldName}}{{end}}
 
@@ -328,9 +390,13 @@ func (q *{{.Singular}}Relation) Order(query string, args ...string) {{.StructNam
 		args = []string{"ASC"}
 	}
 
+	if len(args)%2 != 1 {
+		panic("invalid where call")
+	}
+
 	q.orderValues = append(q.orderValues, orderDirection(&rel.Literal{Value: query}, args[0]))
 
-	for i := 1; i <= len(args); i += 2 {
+	for i := 1; i < len(args); i += 2 {
 		q.orderValues = append(q.orderValues, orderDirection(&rel.Literal{Value: args[i]}, args[i+1]))
 	}
 
