--- a/template.tmpl
+++ b/template.tmpl
@@ -13,6 +13,16 @@ import (
 
 var ErrNotFound error = errors.New("not found")
 
+type Relation interface {
+	// Count ...
+	Count(ctx context.Context) (int64, error)
+
+	// DeleteAll ...
+	DeleteAll(ctx context.Context) (int64, error)
+
+  // TODO: UpdateAll(ctx context.Context, query string, args ...interface{}) error
+}
+
 {{range .Tables}}
 type {{.StructName}}Fields struct { {{range .Columns}}
 	// {{.FieldName}} ...
@@ -147,17 +157,12 @@ func (o *{{.StructName}}) assignField(name string, value interface{}) {
 }
 
 type {{.StructName}}Relation interface {
+  Relation
+
   // All ...
 	All(ctx context.Context) ([]*{{.StructName}}, error)
 
-  // Count ...
-	Count(ctx context.Context) (int64, error)
-
-  // Create
-  // TODO
-
-  // DeleteAll ...
-	DeleteAll(ctx context.Context) (int64, error)
+  // TODO: Create(ctx context.Context, query string, args ...interface{}) (*{{.StructName}}, error)
 
   // Find ...
 	Find(ctx context.Context, id int64) (*{{.StructName}}, error)
@@ -210,7 +215,7 @@ type {{.Singular}}Relation struct {
 func (q *{{.Singular}}Relation) buildQuery(fields []string) (query string, args []interface{}) {
 	columns := make([]rel.Expr, 0, len(fields))
 	for _, field := range fields {
-		columns = append(columns, &rel.Literal{Value: field})
+		columns = append(columns, &rel.Literal{Text: field})
 	}
 	s := rel.SelectStatement{
 		Columns: columns,
@@ -260,21 +265,10 @@ func (q *{{.Singular}}Relation) DeleteAll(ctx context.Context) (int64, error) {
 }
 
 func (q *{{.Singular}}Relation) Where(query string, args ...interface{}) {{.StructName}}Relation {
-	if len(args)%2 != 1 {
-		panic("invalid where call")
-	}
-
-	q.whereClause = append(q.whereClause, &rel.Equality{
-		Field: query,
-		Expr:  &rel.BindParam{Value: args[0]},
+	q.whereClause = append(q.whereClause, &rel.Literal{
+		Text: query,
+		Params: args,
 	})
-
-	for i := 1; i < len(args); i += 2 {
-		q.whereClause = append(q.whereClause, &rel.Equality{
-			Field: args[i].(string),
-			Expr:  &rel.BindParam{Value: args[i+1]},
-		})
-	}
 
 	return q
 }
@@ -368,7 +362,7 @@ func (q *{{.Singular}}Relation) Take(ctx context.Context) (*{{.StructName}}, err
 }
 
 func (q *{{.Singular}}Relation) Find(ctx context.Context, id int64) (*{{.StructName}}, error) {
-	return q.FindBy(ctx, "id", id)
+	return q.FindBy(ctx, "id = ?", id)
 }
 
 func (q *{{.Singular}}Relation) FindBy(ctx context.Context, query string, args ...interface{}) (*{{.StructName}}, error) {
@@ -376,42 +370,19 @@ func (q *{{.Singular}}Relation) FindBy(ctx context.Context, query string, args .
 }
 
 func (q *{{.Singular}}Relation) First(ctx context.Context) (*{{.StructName}}, error) {
-	return q.Order("id", "ASC").Take(ctx)
+	return q.Order("id ASC").Take(ctx)
 }
 
 func (q *{{.Singular}}Relation) Last(ctx context.Context) (*{{.StructName}}, error) {
-	return q.Order("id", "DESC").Take(ctx)
+	return q.Order("id DESC").Take(ctx)
 }
 
 func (q *{{.Singular}}Relation) Order(query string, args ...string) {{.StructName}}Relation {
-	if len(args) == 0 {
-		args = []string{"ASC"}
-	}
+	q.orderValues = append(q.orderValues, &rel.Literal{Text: query})
 
-	if len(args)%2 != 1 {
-		panic("invalid where call")
-	}
-
-	q.orderValues = append(q.orderValues, orderDirection(&rel.Literal{Value: query}, args[0]))
-
-	for i := 1; i < len(args); i += 2 {
-		q.orderValues = append(q.orderValues, orderDirection(&rel.Literal{Value: args[i]}, args[i+1]))
+	for i := 0; i < len(args); i ++ {
+		q.orderValues = append(q.orderValues, &rel.Literal{Text: args[i]})
 	}
 
 	return q
 }{{end}}
-
-func orderDirection(e rel.Expr, direction string) rel.Expr {
-	switch direction {
-	case "ASC", "asc":
-		return &rel.Ascending{
-			Expr: e,
-		}
-	case "DESC", "desc":
-		return &rel.Descending{
-			Expr: e,
-		}
-	}
-
-	panic("fail")
-}
